--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,13 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.14</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.module</groupId>
+		    <artifactId>jackson-modules-java8</artifactId>
+		    <version>2.14.2</version>
+		    <type>pom</type>
+		    <scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
